<resources>
    <string name="select_zewatch_l30p">Select ZeWatch³ in the list of devices</string>
    <string name="adseting_presetsleep_bedtime">Bed Time</string>
    <string name="adseting_presetsleep_awaketime">Awake Time</string>
    <string name="app_name">ZeWatch</string>
    <string name="adseting_presetsleep_title">Preset Sleep</string>
    <string name="setting_my_zecircle">My ZeWatch³</string>
     <string name="sleep_time_err">Sleep time less than 10 minutes!</string>
    <string name="nav_zewatch3_intro1">The ultimate smartwatch experience </string>
    <string name="select_you_device">Select your device </string>
    <string name="zewatch3_pair_tip1">You will receive a pairing request</string>
    <string name="zewatch3_pair_tip2">Click on the left button to accept pairing</string>
    <string name="user_zewatch_recorcall">Use ZeWatch to receive and make calls</string>
    <string name="new_update_available">New Update Available</string>
    <string name="update_tips">Update in progress\nThis operation can take 5-10minutes</string>
    <string name="update_complete">Update Complete</string>
    <string name="update_fial">Update Failed</string>
    <string name="start_now">START NOW</string>
    <string name="volume">Volume</string>
    <string name="update_title">Update</string>
    <string name="binding_select_accessory">Select An Accessory</string>
     <string name="AboutInfo">Founded in January 2013, Kronoz LLC is a Swiss company that manufactures, designs and develops products intended to improve our increasingly mobile, connected and digital lifestyles.-Under the MyKronoz brand, it strives to expand and facilitate the mobile-user experience with stylish, intuitive and functional accessories. -With a simple and unique approach to mobile tech, the goal of MyKronoz is to offer a complete range of connected watches, catering to the needs and tastes of the world\'s various user types. -As a result, the company\'s engineers continuously develop innovative, wearable devices in order to release new models every quarter.</string>
    <string name="reminderTips">You can set up to 6 daily reminders</string>
    <string name="reminderTips1">Choose the type of reminder</string>
    <string name="reminderTips2">Enter the preferred time and day</string>
    <string name="reminderTips3">Once the reminder time is reached,ZeWatch³ \n\rwill gently vibrate and display the corresponding\n\ricon to alert you.</string>
    <string name="homeBtn">Activity</string>
    <string name="goalBtn">Goals</string>
    <string name="remindBtn">Reminders</string>
    <string name="setupBtn">Settings</string>
    <string name="groupsBtn">Groups</string>
    <string name="connectBlueBtn">Connect</string>
    <string name="Today">TODAY</string>
    <string name="Week">WEEK</string>
    <string name="Month">MONTH</string>
    <string name="steps">steps</string>
    <string name="miles">miles</string>
    <string name="kcal">kcal</string>
    <string name="km">km</string>
    <string name="hours">hours</string>
    <string name="Goal">Goal</string>
    <string name="Goals">Goals</string>
    <string name="GOAL">GOAL</string>
    <string name="pound">pound</string>
    <string name="KM">KM</string>
    <string name="MILES">MILES</string>
    <string name="KCAL">KCAL</string>
    <string name="Loading">Loading</string>
    <string name="NoData">No more data</string>
    <string name="LoginFailed">Login failed, please re login</string>
    <string name="lightuUp">Please light up the device screen</string>
    <string name="TryAgain">Try again</string>
    <string name="ServerBusy">Server busy, please try again</string>
    <string name="Network_unavailable">Network is unavailable, please try again later</string>
    <string name="DeviceConnected">Synced to ZeWatch³</string>
    <string name="Binding">Binding</string>
    <string name="DailyGoal">DAILY GOAL</string>
    <string name="STEPS">STEPS</string>
    <string name="SLEEPTIME">SLEEP TIME</string>
    <string name="LIGHTSLEEP">LIGHT SLEEP</string>
    <string name="DEEPSLEEP">DEEP SLEEP</string>
    <string name="AWAKE">AWAKE</string>
    <string name="LightSleep">Light Sleep</string>
    <string name="h">h</string>
    <string name="min">min</string>
    <string name="AwakeFor">Awake for</string>
    <string name="DeepSleep">Deep sleep</string>
    <string name="FellAsleep">Fell Asleep in</string>
    <string name="Awake">Awake</string>
    <string name="times">times</string>
    <string name="TatalSleepTime">Total sleep</string>
    <string name="goal">goal</string>
    <string name="MyGoals">MY DAILY GOALS</string>
    <string name="STEPS1">STEPS</string>
    <string name="DISTANCE">DISTANCE</string>
    <string name="ACTIVEMINUTES">ACTIVE MINUTES</string>
    <string name="CALORIES">CALORIES</string>
    <string name="SLEEP">SLEEP</string>
    <string name="Modify">Edit</string>
    <string name="ADDNEWREMINDER">ADD A NEW REMINDER</string>
    <string name="MoveToRemind">Move to remind</string>
    <string name="Nomorehan20reminders">No more than 20 reminders</string>
    <string name="Ok">Ok</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="NeedSynchronized">Need to be synchronized to a pedometer?</string>
    <string name="PleaseTurnOn">Please turn on the display</string>
    <string name="NoMoreReminders">No more than 20 reminders</string>
    <string name="deviceScreen">device screen</string>
    <string name="Successfully">Successful</string>
    <string name="Failed">Failed</string>
    <string name="synchronizedPedometer">Synchronize to ZeWatch³?</string>
    <string name="CustomRepeat">Custom Repeat</string>
    <string name="RemindContent">Add a note</string>
    <string name="RemindTime">Time</string>
    <string name="Save">Save</string>
    <string name="Defined">Defined</string>
    <string name="Medicine">Medicine</string>
    <string name="Eat">Eat</string>
    <string name="Sleep">Sleep</string>
    <string name="WakeUp">Wake up</string>
    <string name="Sport">Sport</string>
    <string name="PersonalSuccess">Submitted successfully</string>
    <string name="InputContent">Must input content</string>
    <string name="TimeReminders">Set reminder time</string>
    <string name="SelectReminderWeek">Select the day you want the reminder to repeat</string>
    <string name="SelectTypeEvent">Please select reminder type</string>
    <string name="Delete">Delete</string>
    <string name="MYPROFILE">MY PROFILE</string>
    <string name="ADVANCEDSETTINGS">ADVANCED SETTINGS</string>
    <string name="SETUPZeWatch">SET UP ZeWatch³</string>
    <string name="HELP">HELP</string>
    <string name="ABOUTUS">ABOUT US</string>
    <string name="RESETZeWatch">RESET ZeWatch³</string>
    <string name="LOGOUT">LOG OUT</string>
    <string name="DeterminedToExit">Exit from the current account？</string>
    <string name="advanced_setting1">Advanced Settings</string>
    <string name="ABOUTUSEX">About Us</string>
    <string name="Country">Country</string>
    <string name="presetSleep">PRESET SLEEP</string>
    <string name="Language">Language</string>
    <string name="TimeFormat">Time Format</string>
    <string name="LengthUnits">Length Units</string>
    <string name="WeightUnits">Weight Units</string>
    <string name="MyProfile">My Profile</string>
    <string name="Username">Username :</string>
    <string name="ChangePassword">Change Password</string>
    <string name="Gender">Gender :</string>
    <string name="Height">Height :</string>
    <string name="Weight">Weight :</string>
    <string name="Birthday">Birthday :</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Cancel">Cancel</string>
    <string name="Hour12">12-Hour</string>
    <string name="Hour24">24-Hour</string>
    <string name="Cent_Kilometers">Centimeters,Kilometers</string>
    <string name="FeetMiles">Feet,Miles</string>
    <string name="Kilograms">Kilograms</string>
    <string name="Pounds">Pounds</string>
    <string name="kg">kg</string>
    <string name="week">WEEK</string>
    <string name="months">MONTH</string>
    <string name="OldPassWord">Old Password</string>
    <string name="NewPassWord">New Password</string>
    <string name="RepeatedPassword">Repeated Password</string>
    <string name="InputOldPassword">Must input old password</string>
    <string name="MInputNewPassword">Must input new password</string>
    <string name="OldIncorrect">The old password is incorrect</string>
    <string name="InputRepeatedPassword">Must input repeated password</string>
    <string name="NotConformity">The password is not conformity with the one you input just now</string>
    <string name="RevisedSuccessfully">Revised successfully</string>
    <string name="ZeWatch">ZeWatch³</string>
    <string name="SearchingZeWatch">Searching for ZeWatch³</string>
    <string name="MakeSureZeWatch">Make sure ZeWatch³ is nearby and that its display is turned on</string>
    <string name="TRYAGAIN">TRY AGAIN</string>
    <string name="CurrentUserWatches">Your ZeWatch³ has already been paired with another email address. For privacy and security reasons, please contact %s and send us a screenshot including the D/N number indicated below. Our team will assist you to proceed further with your pairing process.</string>
    <string name="CurrentUserEmailTip01">你确定使用这个邮箱</string>
	<string name="CurrentUserEmailTip02">绑定固件</string>
    <string name="binding">binding</string>
    <string name="tips">Information</string>
    <string name="InitializationFailed">Initialization failed</string>
    <string name="EnableBluetooth">Enable Bluetooth on your android device</string>
    <string name="NEXT">NEXT</string>
    <string name="ClickOnSetUp">Click on Set up below\nPress ZeWatch³ button to turn on the display\nZeWatch³ display must be illuminated to set up</string>
    <string name="SETUP">SET UP</string>
    <string name="SuccessfulSetUp">Successful Set-up!</string>
    <string name="SetUpFailed">Set-up failed!</string>
    <string name="HELLP">Help</string>
    <string name="FrequentlyAskedQuestions">Frequently asked questions</string>
    <string name="TermsService">Terms of service</string>
    <string name="ZeWatchVersion">ZeWatch³ App Version</string>
    <string name="Copyright">  Copyright,Kronoz LLC\nAll Rights Reserved</string>
    <string name="help_firmware_version">Firmware version</string>
    <string name="contactSupport">CONTACT CUSTOMER SUPPORT</string>
    <string name="Contactsupport">Contact support</string>
    <string name="Error">Error</string>
    <string name="Syncing1">Syncing</string>
    <string name="dailyGoals1">You have reached %@%% of your daily goals</string>
    <string name="SETUPZeWatch1">SET UP ZeWatch³</string>
    <string name="UNPAIRZeWatch">UNPAIR ZeWatch³</string>
    <string name="SIGNUP">SIGN UP</string>
    <string name="LOGIN">LOG IN</string>
    <string name="ZeWatchWristband">ZeWatch³ keeps you connected to your phone and displays your activity and sleep data in real time, 24/7!</string>
    <string name="Email">Email:</string>
    <string name="Password">Password:</string>
    <string name="Logging">Loading</string>
    <string name="RESETPASSWORD">RESET MY PASSWORD</string>
    <string name="InputMailbox">Must input email address</string>
    <string name="InputPassword">Must input password</string>
    <string name="InputUsername">Must input username</string>
    <string name="Sun">Sun</string>
    <string name="Mon">Mon</string>
    <string name="Tues">Tues</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Aphoneiconwill">A phone icon will appear on the status bar at the top of ZeWatch³ screen</string>
    <string name="Ifpairingfailed">If pairing failed please repeat the same steps</string>
</resources>