<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/Set_up"
        layout="@layout/ic_common_title" />

    <RelativeLayout
        android:id="@+id/rl_done" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
	    android:layout_marginBottom="6dip"
	     android:layout_below="@id/Set_up"
        >
        
        <TextView
	        android:id="@+id/tv_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:gravity="center"
	        android:textSize="22dp"
	        android:layout_marginTop="16dp"
	        android:text="@string/SETUP"
	        android:textStyle="bold"
	        android:textColor="@color/blue1"
	        android:drawableLeft="@drawable/img_right"
	         />
        
    </RelativeLayout>
	
    <TextView
	        android:id="@+id/tv_text_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/rl_done"
			android:gravity="center"
	        android:layout_marginTop="6dp"
	        android:text="@string/Aphoneiconwill" />
    
    <ImageView 
        android:id="@+id/iv_set_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/img_set_up_blue2_done"
        android:layout_below="@id/tv_text_title"
        android:layout_marginTop="6dp"
        />
   
      <TextView
       android:id="@+id/tv_text_title1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/iv_set_up"
	   android:gravity="center"
       android:layout_marginTop="6dp"
       android:text="@string/Ifpairingfailed" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"
        android:background="@drawable/btn_selector"
        android:text="@string/NEXT"
        android:textColor="#FFFFFF" />


</RelativeLayout>