<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/canvas"
    android:paddingLeft="56dp"
    android:paddingRight="56dp"
    android:paddingTop="6dp"
    android:paddingBottom="6dp"
    >

    <RadioGroup
        android:id="@+id/rg_type"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:background="@color/transparent"
        android:orientation="horizontal"
        >

    <RadioButton
        android:id="@+id/rb_day"
        android:layout_width="1dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:button="@null"
        android:checked="true"
        android:background="@drawable/btn_left_circle_selector1"
        android:gravity="center"
        android:text="@string/Today" />

    <RadioButton
        android:id="@+id/rb_week"
        android:layout_width="1dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/btn_selector1"
        android:button="@null"
        android:gravity="center"
        android:text="@string/Week"/>

    <RadioButton
        android:id="@+id/rb_month"
        android:layout_width="1dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/btn_right_circle_selector1"
        android:button="@null"
        android:gravity="center"
        android:text="@string/Month" />
    </RadioGroup>
</LinearLayout>