<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bg_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <include
        android:id="@+id/ic_change_password_title"
        layout="@layout/ic_common_title" />

    <RelativeLayout
        android:id="@+id/oldpassword_layout"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/ic_change_password_title"
        android:background="#ffffff" >

        <EditText
            android:id="@+id/et_old_pwd"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="12dp"
            android:background="@null"
            android:hint="@string/OldPassWord"
            android:password="true"
            android:singleLine="true"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/newpassword_layout"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:layout_below="@+id/oldpassword_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="#ffffff" >

        <EditText
            android:id="@+id/et_new_pwd"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="12dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/NewPassWord"
            android:password="true"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/repated_password_layout"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:layout_below="@+id/newpassword_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="#ffffff" >

        <EditText
            android:id="@+id/et_repeat_new_pwd"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="12dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/RepeatedPassword"
            android:password="true"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="18sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_set_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"
        android:background="@drawable/btn_selector"
        android:text="@string/SETUPZeWatch"
        android:textColor="#FFFFFF" />
</RelativeLayout>