<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/foot_content_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center" >

    <RelativeLayout
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tv_activity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/bottom_nav"
            android:drawableTop="@drawable/nav_sport_selector"
            android:gravity="center"
            android:paddingTop="5dip"
            android:paddingBottom="5dp"
            android:text="@string/homeBtn"
            android:textColor="@color/bottom_nav_font_normal"
            android:textSize="10sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tv_remind"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/bottom_nav"
            android:drawableTop="@drawable/nav_remind_selector"
            android:gravity="center"
            android:paddingTop="5dip"
            android:paddingBottom="5dp"
            android:text="@string/remindBtn"
            android:textColor="@color/bottom_nav_font_normal"
            android:textSize="10sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/bottom_nav"
            android:drawableTop="@drawable/nav_setting_selector"
            android:gravity="center"
            android:paddingTop="5dip"
            android:paddingBottom="5dp"
            android:text="@string/setupBtn"
            android:textColor="@color/bottom_nav_font_normal"
            android:textSize="10sp" />

    </RelativeLayout>

</LinearLayout>