<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/titie_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
        layout="@layout/ic_common_title" />

   <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titie_layout"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="6dp"
         >
	<LinearLayout 
	    android:id="@+id/ll_tip1"
		android:layout_width="match_parent"
        android:layout_height="wrap_content"	
        android:gravity="center_vertical"
        android:layout_marginLeft="12dp"
        android:orientation="horizontal"  >
	        <TextView
	            android:id="@+id/step1_text"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:layout_marginLeft="3dp"
	            android:text="@string/zewatch3_pair_tip1" />

	</LinearLayout>
	<LinearLayout 
	   android:id="@+id/ll_tip2"
	   android:layout_below="@id/ll_tip1"
	   android:layout_width="match_parent"
       android:layout_height="wrap_content"	
       android:gravity="center_vertical"
       android:layout_marginTop="6dp"
        android:layout_marginLeft="12dp"
       android:orientation="horizontal" >
        <TextView
            android:id="@+id/step3_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
	        android:layout_marginLeft="3dp"
	        android:layout_gravity="center_vertical"
            android:text="@string/zewatch3_pair_tip2" />
       </LinearLayout>
    </RelativeLayout>
    
    <ImageView
        android:id="@+id/iv_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_blue2_pairing_device"
        android:layout_centerInParent="true"
        />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"
        android:background="@drawable/btn_selector"
        android:text="@string/NEXT"
        android:textColor="#FFFFFF" />

</RelativeLayout>